deps update (+ a small fix about the gap between the icon and the button label)

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -5,7 +5,7 @@
   appearance: none;
   cursor: pointer;
   display: flex;
-  gap: var(--wp--preset--spacing--20);
+  gap: var(--wp--preset--spacing--40);
   line-height: 1;
   align-items: center;
   white-space: nowrap;
